--- a/application/index/view/category/edit.html
+++ b/application/index/view/category/edit.html
@@ -40,14 +40,19 @@
                 url: '/category/edit/{$category.id}',
                 data: data.field,
                 success: function (result) {
-                    console.log(result);
-                    layer.close(index1);
-                    layer.msg('修改成功');
+                    if (result == 1) {
+                        console.log(result);
+                        layer.close(index1);
+                        layer.msg('修改成功');
+                    } else {
+                        layer.msg('修改失败');
+                        console.log(result)
+                    }
                 },
                 error: function (error) {
                     layer.close(index1);
                     console.log(error);
-                    layer.msg('修改失败');
+                    layer.msg('修改失败，网络或服务器内部错误');
                 }
             });
             return false;
