--- a/application/index/view/user/all.html
+++ b/application/index/view/user/all.html
@@ -48,7 +48,6 @@ layui.use(['form', 'table'], function () {
         var data = obj.data; //获得当前行数据
         var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
         var tr = obj.tr; //获得当前行 tr 的DOM对象
-        console.log(data);
         // 删除
         if (layEvent === 'del') {
             layer.confirm('确定要删除吗', {icon: 3, title:'提示'}, function(index){
@@ -107,76 +106,10 @@ layui.use(['form', 'table'], function () {
         }
         // 状态更改
         if (layEvent === 'status'){
-            var statusLoadIndex = layer.load(1);
-            var switchE = $(tr).find('input:eq(0)');
-            var switchE2 = $(tr).find('.layui-form-switch:eq(0)');
-            // 获取切换后的值
-            var checkbox = $('#status'+data.id).get(0);
-            var status = checkbox.checked ? 1 : 2;
-
-            // 入库
-            $.post({
-                url: '/user/edit/' + data.id,
-                data: {status: status},
-                success: function (result) {
-                    layer.close(statusLoadIndex);
-                    if (result === 1) {
-                        // 入库成功更改switch value值
-                        checkbox.value = status;
-                        // 更改数据源的值
-                        obj.data.status = status;
-                        layer.msg('操作成功');
-                    } else {
-                        // 入库失败，更改switch状态
-                        // 更改checked
-                        // 更改em text
-                        checkbox.checked = !checkbox.checked;
-                        // 更改switch className
-                        if (checkbox.checked) {
-                            switchE2.addClass('layui-form-onswitch');
-                            switchE2.find('em').text('启用');
-                        } else {
-                            switchE2.removeClass('layui-form-onswitch');
-                            switchE2.find('em').text('锁定');
-                        }
-                        console.log(result);
-                        layer.msg('操作失败');
-                    }
-                },
-                error: function (error) {
-                    console.log(error);
-                    // 入库失败，更改switch状态
-                    // 更改checked
-                    // 更改em text
-                    console.log(switchE.get(0).checked)
-                    switchE.get(0).checked = !switchE.get(0).checked;
-                    console.log(switchE.get(0).checked)
-                    // 更改switch className
-                    if (switchE.get(0).checked) {
-                        switchE2.addClass('layui-form-onswitch');
-                        switchE2.find('em').text('启用');
-                    } else {
-                        switchE2.removeClass('layui-form-onswitch');
-                        switchE2.find('em').text('锁定');
-                    }
-                    layer.msg('内部错误，操作失败');
-                }
-            });
-
+            tableSwitch($, obj, '/user/edit/', 'status')
         }
     })
-    // 监听开关
-    // table.on('switch(status)', function(data){
-    //     data.status = 5;
-    //     console.log(data)
-    //     console.log($(data.elem).val())
-    //     if (data.elem.checked) {
-    //         $(data.elem).val(1);
-    //     } else {
-    //         $(data.elem).val(2);
-    //     }
-    //     // console.log($(data.elem).val());
-    // });
 })
+
 </script>
 {/block}
