--- a/application/index/view/contract/edit.html
+++ b/application/index/view/contract/edit.html
@@ -66,7 +66,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">负责人</label>
             <div class="layui-input-block">
-                <input value="{$user.name}" type="text" name="manager" required lay-verify="required" placeholder="负责人"
+                <input value="{$contract.manager}" type="text" name="manager" required lay-verify="required" placeholder="负责人"
                        autocomplete="off"
                        class="layui-input">
             </div>
@@ -74,7 +74,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">部门</label>
             <div class="layui-input-block">
-                <input value="{$user.department}" type="text" name="department" required lay-verify="required"
+                <input value="{$contract.department}" type="text" name="department" required lay-verify="required"
                        placeholder="部门" autocomplete="off"
                        class="layui-input">
             </div>
