--- a/application/index/view/type/edit.html
+++ b/application/index/view/type/edit.html
@@ -3,14 +3,14 @@
 <div class="layui-container">
     <form class="layui-form layui-form-pane" action="">
         <div class="layui-form-item">
-            <label class="layui-form-label">合同类型名称</label>
+            <label class="layui-form-label">类型名称</label>
             <div class="layui-input-block">
                 <input value="{$type.name}" type="text" name="name" required lay-verify="required" placeholder="请填写合同类型名称" autocomplete="off"
                        class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">所属合同分类</label>
+            <label class="layui-form-label">所属分类</label>
             <div class="layui-input-block">
                 <select name="category_id" required lay-verify="required" lay-search lay-filter="category">
                     <option value>请输入选择</option>
